# superlearning-audio

./: .gitignore  .replit  DockerFile  app.py  extract_flags.py  extract_flags_precise.py  optimize_flags.py  optimize_spanish_flag.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
attached_assets/: Pasted-Prompt-for-Replit-Create-a-Python-web-app-Flask-based-with-a-simple-frontend-interface-that-allo-1761720370332_1761720370332.txt  Pasted-from-flask-import-Flask-render-template-request-send-file-from-gtts-import-gTTS-from-pydub-impo-1761720441658_1761720441658.txt  test1_1761726664918.txt
