[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"

dependencies = [
    "gtts>=2.5.4",
    "openai>=2.6.1",
    "pydub>=0.25.1",
    "streamlit>=1.50.0",
    "tenacity>=9.1.2",
    "python-dotenv>=1.0.1",
    "ffmpeg-python>=0.2.0",
    "imageio-ffmpeg>=0.4.9",
]